[package]
name = "tui"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crossterm = "0.27.0"
engine ={ path = "../engine"}
ratatui = { version="0.28.1", features = ["palette"]}
anyhow.workspace = true
color-eyre = "0.6.3"
palette = "0.7.6"
